--- a/GameTry/GameTry.vcxproj.filters
+++ b/GameTry/GameTry.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="tinystr.cpp">
       <Filter>Файлы исходного кода\TiXML</Filter>
     </ClCompile>
+    <ClCompile Include="MovingPlatform.cpp">
+      <Filter>Файлы исходного кода\Entity</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="map.h">
@@ -82,6 +85,9 @@
     </ClInclude>
     <ClInclude Include="tinyxml.h">
       <Filter>Заголовочные файлы\TiXML</Filter>
+    </ClInclude>
+    <ClInclude Include="MovingPlatform.h">
+      <Filter>Заголовочные файлы\Entity</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
