--- a/GameTry/GameTry.vcxproj.filters
+++ b/GameTry/GameTry.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="MovingPlatform.cpp">
       <Filter>Файлы исходного кода\Entity</Filter>
     </ClCompile>
+    <ClCompile Include="Bullet.cpp">
+      <Filter>Файлы исходного кода\Entity</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="map.h">
@@ -87,6 +90,9 @@
       <Filter>Заголовочные файлы\TiXML</Filter>
     </ClInclude>
     <ClInclude Include="MovingPlatform.h">
+      <Filter>Заголовочные файлы\Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="Bullet.h">
       <Filter>Заголовочные файлы\Entity</Filter>
     </ClInclude>
   </ItemGroup>
