--- a/GameTry/GameTry.vcxproj.filters
+++ b/GameTry/GameTry.vcxproj.filters
@@ -60,7 +60,13 @@
     <ClCompile Include="Bullet.cpp">
       <Filter>Файлы исходного кода\Entity</Filter>
     </ClCompile>
+    <ClCompile Include="My_Animation.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
     <ClCompile Include="Animation.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+    <ClCompile Include="AnimatedSprite.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
@@ -95,7 +101,13 @@
     <ClInclude Include="Bullet.h">
       <Filter>Заголовочные файлы\Entity</Filter>
     </ClInclude>
+    <ClInclude Include="My_Animation.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
     <ClInclude Include="Animation.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="AnimatedSprite.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
